# ajisen-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml  test.yml  test_and_publish.yml
config/: default.toml
scripts/: deploy_prod.sh  rebuild_all.sh  run_local.sh  send_to_gcp.sh
src/: logging.rs  main.rs  settings.rs
src/commands/: bulkdel.rs  die_rolls.rs  mod.rs  poll.rs
