[package]
name = "ajisen"
version = "0.1.0"
authors = ["Subrat Mainali <mainali.subrat@utexas.edu>"]
edition = "2018"

[dependencies]
chrono = "0.4"
config = "0.10.1"
fern = { version = "0.5.8", features = ["colored"] }
log = "0.4.8"
rand = "0.7.2"
regex = "1.3.1"
serde = "1.0.99"
serde_derive = "1.0.99"

[dependencies.serenity]
version = "0.6"
features = ["framework", "standard_framework", "rustls_backend"]
